--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>it.unibs.ing</groupId>
-    <artifactId>IS2</artifactId>
+    <artifactId>ServiceXchanger</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
